# AdCraft

./: .gitignore  README.md  README_zh.md  compose.yaml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260720_01_create_v2_event_store.py  20260721_02_create_v2_project_workflow_authoring.py  20260721_03_create_v2_asset_library.py
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  advertising.py  front_desk.py  prompt_optimizers.py
apps/api/app/api/: dependencies.py
apps/api/app/cli/: __init__.py  export_v2_events.py  export_v2_workflow_authoring_backup.py
apps/api/app/core/: config.py  llm.py  llm_call_policy.py
apps/api/app/persistence/: asset_library_repository.py  backup.py  database.py  errors.py  event_payload.py  event_repository.py  models.py  project_repository.py  schema.py  workflow_authoring_repository.py
apps/api/app/schemas/: ad_workflow.py  agent_conversations.py  agent_outputs.py  asset_library.py  asset_references.py  assets.py  canvas_runtime.py  canvas_targets.py  chat_workflow.py  chat_workflow_stream.py  director_context.py  director_orchestrator.py  final_composition.py  front_desk.py  health.py  media_tasks.py  prompt_optimization.py  provider_identity_certification.py  provider_settings.py  provider_strategy.py  quality_review.py  specialist_agents.py  tianpuyue_callback_lease.py  (+35 more)
apps/api/scripts/: build_recommended_asset_pack.py  chat_workflow_session.py  poll_media_tasks.py  run_chat_workflow.py
(+713 files in other folders)
